# habit_tracker

./: .gitignore  README.md  basics.md  f  habtrack.py  setup.cfg
cli/: __init__.py  cli_data.py  cli_start.py  com_analyse.py  com_mngt.py  com_storage.py  command.py
data/: sample.json  test.json  test_habit.json  work.json
habtrack/: __init__.py  analyse.py  habit.py  habtrack.py  main.py  period.py  pytest.ini  storage.py
habtrack/cli/: __init__.py  cli_data.py  cli_start.py  com_analyse.py  com_mngt.py  com_storage.py  command.py  manual.py
habtrack/data/: habtrack.json  sample.json  vacuum_clean.json
habtrack/habtrack/: main.py  storage.py
habtrack/src/: __init__.py  analyse.py  habit.py  main.py  period.py  storage.py
habtrack/tests/: conftest.py  test_functional.py
habtrack/tests/test_cli/: test_cli_start.py  test_com_analyse.py  test_com_mngt.py  test_com_storage.py  test_command.py  test_manual.py
habtrack/tests/test_habtrack/: test_analyse.py  test_habit.py  test_main.py  test_period.py  test_storage.py
tests/: conftest.py  pytest.ini  test_analyse.py  test_functional.py  test_habit.py  test_main.py  test_period.py  test_storage.py
tests/test_cli/: test_cli_data.py  test_cli_start.py  test_com_analyse.py  test_com_mngt.py  test_com_storage.py  test_command.py  test_manual.py
tests/test_habtrack/: test_analyse.py  test_habit.py  test_main.py  test_period.py  test_storage.py
wheel/: habtrack-1.0-py3-none-any.whl
