[metadata]
name = habtrack
version = 1.0
author = Soeren Olischer
author_email = olischer@outlook.de
url = https://github.com/077479/habit_tracker
description = software project for a module for the course data science at the iu
long_description = README.md
keywords = habittracker, habit, timeschedule
license = MIT


[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts = 
    habtrack = habtrack.habtrack:run

[options.package_data]
habtrack = data/*.json, pytest.ini